# stackoverflow-to-sqlite

./: CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
stackoverflow_to_sqlite/: cli.py  sqlite_helpers.py  stack_exchange_api.py  types.py
tests/: conftest.py  test_cli.py  test_stack_exchange_api.py  test_stackoverflow_to_sqlite.py  test_types.py
